name: yesod-test
version: 0.0.0
license: BSD3
build-type: Simple

cabal-version: >= 1.6

executable yesod-test
  main-is: yesod-test.hs
  build-depends: base > 4,
                 --yesod-core == 0.9.3.3,
                 --yesod-core == 0.9.1,
                 yesod-core == 0.8.3.1,
                 warp,
                 bytestring
  ghc-options: -O2 -threaded
